fix: docs ci
