# docs/swagger.json
@@ -45,13 +45,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.HTTPError"
+                            "$ref": "#/definitions/server.httpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.HTTPError"
+                            "$ref": "#/definitions/server.httpError"
                         }
                     }
                 }
@@ -736,7 +736,7 @@
                 }
             }
         },
-        "server.HTTPError": {
+        "server.httpError": {
             "type": "object",
             "properties": {
                 "code": {
